tests/baselines/reference/objectLiteralWithSemicolons1.errors.txt
tests/cases/compiler/objectLiteralWithSemicolons1.ts(1,11): error TS2304: Cannot find name 'a'.
tests/cases/compiler/objectLiteralWithSemicolons1.ts(1,12): error TS1005: ',' expected.
tests/cases/compiler/objectLiteralWithSemicolons1.ts(1,14): error TS2304: Cannot find name 'b'.
tests/cases/compiler/objectLiteralWithSemicolons1.ts(1,15): error TS1005: ',' expected.
tests/cases/compiler/objectLiteralWithSemicolons1.ts(1,17): error TS2304: Cannot find name 'c'.


==== tests/cases/compiler/objectLiteralWithSemicolons1.ts (5 errors) ====
    var v = { a; b; c }
              ~
!!! error TS2304: Cannot find name 'a'.
               ~
!!! error TS1005: ',' expected.
                 ~
!!! error TS2304: Cannot find name 'b'.
                  ~
!!! error TS1005: ',' expected.
                    ~
!!! error TS2304: Cannot find name 'c'.